--- a/index.html
+++ b/index.html
@@ -1,11 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Peacock</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <section id="left" class="left">
+        <div class="main-header__brand">
+          <a href="index.html">
+            <img
+              src="./img/peacock-logo-9B84CDB551-seeklogo.com.png"
+              alt="logo"
+            />
+            <h4>Peacock</h4>
+          </a>
+        </div>
+        <nav class="main-navigation">
+          <a href="menu" class="main-menu">Menu</a>
+          <ul class="main-navigation__items">
+            <dt class="main-navigation__item">
+              <i class="fa-solid fa-house" style="color: red"></i>
+              <a href="home" style="color: red">Home</a>
+            </dt>
+            <dt class="main-navigation__item">
+              <i class="fa-solid fa-users" style="color: aliceblue"></i>
+              <a href="community">Community</a>
+            </dt>
+            <dt class="main-navigation__item">
+              <i class="fa-solid fa-pause" style="color: aliceblue"></i>
+              <a href="discover">Discover</a>
+            </dt>
+            <dt class="main-navigation__item">
+              <i class="fa-solid fa-trophy" style="color: aliceblue"></i>
+              <a href="awards">Awards</a>
+            </dt>
+            <dt class="main-navigation__item">
+              <i class="fa-solid fa-user" style="color: aliceblue"></i>
+              <a href="celebs">Celebs</a>
+            </dt>
+            <dt class="main-navigation__item">
+              <h2 style="color: aliceblue" class="main-library">LIBRARY</h2>
+            </dt>
+            <dt class="main-navigation__item">
+              <i class="fa-solid fa-clock" style="color: aliceblue"></i>
+              <a href="recent">Recent</a>
+            </dt>
+            <dt class="main-navigation__item">
+              <i class="fa-solid fa-star" style="color: aliceblue"></i>
+              <a href="top rated">Top Rated</a>
+            </dt>
+            <dt class="main-navigation__item">
+              <i class="fa-solid fa-download"></i>
+              <a href="downloaded">Downloaded</a>
+            </dt>
+            <dt class="main-navigation__item">
+              <h2 class="main-category">CATEGORY</h2>
+            </dt>
+            <dt class="main-navigation__item">
+              <i class="fa-solid fa-tv"></i>
+              <a href="tv-show">Tv - Show</a>
+            </dt>
+            <dt class="main-navigation__item">
+              <i class="fa-solid fa-film"></i>
+              <a href="movie">Movie</a>
+            </dt>
+            <dt class="main-navigation__item">
+              <i class="fa-solid fa-database"></i>
+              <a href="anime">Anime</a>
+            </dt>
+            <dt class="main-navigation__item">
+              <h2 class="main-general">GENERAL</h2>
+            </dt>
+            <dt class="main-navigation__item">
+              <i class="fa-solid fa-gear"></i>
+              <a href="settings">Settings</a>
+            </dt>
+            <dt class="main-navigation__item">
+              <i class="fa-solid fa-right-to-bracket"></i>
+              <a href="log aut">Log Out</a>
+            </dt>
+          </ul>
+        </nav>
+      </section>
+    </div>
+    <div class="container">
+      <main id="center" class="center">
+        <div class="header">
+          <a href="Movie">Movie</a>
+          <a href="Tv Show" style="font-weight: 600">Tv Show</a>
+          <a href="Anime">Anime</a>
+        </div>
+      </main>
+      <div class="clearfix"></div>
+    </div>
+    <div class="container">
+      <section id="right" class="right"></section>
+    </div>
+  </body>
 </html>
