--- a/index.html
+++ b/index.html
@@ -97,11 +97,68 @@
           <a href="Tv Show" style="font-weight: 600">Tv Show</a>
           <a href="Anime">Anime</a>
         </div>
+        <div class="image_center">
+          <img
+            class="image_first"
+            src="./img/gallery-1498838810-gettyimages-461493851.jpg"
+            alt=""
+          />
+          <h5 style="color: aliceblue">SEASON 5</h5>
+          <h1 style="color: white">SUPERNATURAL</h1>
+          <h4 style="color: aliceblue">ACTION, HORROR, CODEMY</h4>
+          <div class="button_center">
+            <button class="button_center-first">Watch Now</button>
+            <button class="button_center-second">+</button>
+          </div>
+          <h1 style="color: aliceblue" class="main-playing">Now Playing</h1>
+        </div>
       </main>
+      <div class="main-image_center">
+        <img src="./img/kVr5zIAFSPRQ57Y1zE7KzmhzdMQ.jpg" alt="" />
+        <img
+          class="image_center-2"
+          src="./img/MV5BNDUyZTJmODQtZmRkMS00YjJiLTgxZmUtMjQ5OGNjNzkyM2Y5XkEyXkFqcGc@._V1_.jpg"
+          alt=""
+        />
+        <img class="image_center-3" src="./img/image.jpg" alt="" />
+        <img
+          class="image_center-4"
+          src="./img/MV5BN2Q0YWE1MjktODJlMi00NTRiLWI2ZTctZTAxNjkyODVjM2EyXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"
+          alt=""
+        />
+      </div>
+      <div class="main-button_center">
+        <button class="main_center-first">Watch Now</button>
+        <button class="main_center-second">+</button>
+        <button class="btn_center-first">Watch Now</button>
+        <button class="btn_center-second">+</button>
+        <button class="section_center-first">Watch Now</button>
+        <button class="section_center-second">+</button>
+        <button class="nr_center-first">Watch Now</button>
+        <button class="nr_center-second">+</button>
+      </div>
+      <h1 class="main-movies_center" style="color: aliceblue">
+        Top Rated Movies
+      </h1>
+      <div class="main-cinema_center">
+        <img class="main-cinema_first" src="./img/2020605-6400.jpg" alt="" />
+        <img
+          class="main-cinema_second"
+          src="./img/wallpapersden.com_netflix-archive-81_2048x1152.jpg"
+          alt=""
+        />
+        <img class="main-cinema_third" src="./img/AJLT2.jpeg" alt="" />
+      </div>
+      <div class="main-cinema_header">
+        <h1 class="header_first">Comedy (2023)</h1>
+        <h1 class="header_second">Bad Little Lies (2022)</h1>
+        <h1 class="header_third">Supernatural (2021)</h1>
+      </div>
       <div class="clearfix"></div>
     </div>
     <div class="container">
       <section id="right" class="right"></section>
+      <div class="clearfix"></div>
     </div>
   </body>
 </html>
