--- a/index.html
+++ b/index.html
@@ -25,67 +25,67 @@
         <nav class="main-navigation">
           <a href="menu" class="main-menu">Menu</a>
           <ul class="main-navigation__items">
-            <dt class="main-navigation__item">
+            <li class="main-navigation__item">
               <i class="fa-solid fa-house" style="color: red"></i>
               <a href="home" style="color: red">Home</a>
-            </dt>
-            <dt class="main-navigation__item">
+            </li>
+            <li class="main-navigation__item">
               <i class="fa-solid fa-users" style="color: aliceblue"></i>
               <a href="community">Community</a>
-            </dt>
-            <dt class="main-navigation__item">
+            </li>
+            <li class="main-navigation__item">
               <i class="fa-solid fa-pause" style="color: aliceblue"></i>
               <a href="discover">Discover</a>
-            </dt>
-            <dt class="main-navigation__item">
+            </li>
+            <li class="main-navigation__item">
               <i class="fa-solid fa-trophy" style="color: aliceblue"></i>
               <a href="awards">Awards</a>
-            </dt>
-            <dt class="main-navigation__item">
+            </li>
+            <li class="main-navigation__item">
               <i class="fa-solid fa-user" style="color: aliceblue"></i>
               <a href="celebs">Celebs</a>
-            </dt>
-            <dt class="main-navigation__item">
+            </li>
+            <li class="main-navigation__item">
               <h2 style="color: aliceblue" class="main-library">LIBRARY</h2>
-            </dt>
-            <dt class="main-navigation__item">
+            </li>
+            <li class="main-navigation__item">
               <i class="fa-solid fa-clock" style="color: aliceblue"></i>
               <a href="recent">Recent</a>
-            </dt>
-            <dt class="main-navigation__item">
+            </li>
+            <li class="main-navigation__item">
               <i class="fa-solid fa-star" style="color: aliceblue"></i>
               <a href="top rated">Top Rated</a>
-            </dt>
-            <dt class="main-navigation__item">
+            </li>
+            <li class="main-navigation__item">
               <i class="fa-solid fa-download"></i>
               <a href="downloaded">Downloaded</a>
-            </dt>
-            <dt class="main-navigation__item">
+            </li>
+            <li class="main-navigation__item">
               <h2 class="main-category">CATEGORY</h2>
-            </dt>
-            <dt class="main-navigation__item">
+            </li>
+            <li class="main-navigation__item">
               <i class="fa-solid fa-tv"></i>
               <a href="tv-show">Tv - Show</a>
-            </dt>
-            <dt class="main-navigation__item">
+            </li>
+            <li class="main-navigation__item">
               <i class="fa-solid fa-film"></i>
               <a href="movie">Movie</a>
-            </dt>
-            <dt class="main-navigation__item">
+            </li>
+            <li class="main-navigation__item">
               <i class="fa-solid fa-database"></i>
               <a href="anime">Anime</a>
-            </dt>
-            <dt class="main-navigation__item">
+            </li>
+            <li class="main-navigation__item">
               <h2 class="main-general">GENERAL</h2>
-            </dt>
-            <dt class="main-navigation__item">
+            </li>
+            <li class="main-navigation__item">
               <i class="fa-solid fa-gear"></i>
               <a href="settings">Settings</a>
-            </dt>
-            <dt class="main-navigation__item">
+            </li>
+            <li class="main-navigation__item">
               <i class="fa-solid fa-right-to-bracket"></i>
               <a href="log aut">Log Out</a>
-            </dt>
+            </li>
           </ul>
         </nav>
       </section>
@@ -157,7 +157,148 @@
       <div class="clearfix"></div>
     </div>
     <div class="container">
-      <section id="right" class="right"></section>
+      <section id="right" class="right">
+        <div class="search-container">
+          <span class="search-icon"
+            ><i class="fa-solid fa-magnifying-glass"></i
+          ></span>
+          <input type="text" placeholder="Search" class="search-input" />
+        </div>
+        <ul class="main-navigation__items-right">
+          <li class="main-navigation__item-right">
+            <h1 class="main-navigation__header-right">Popular Movies</h1>
+            <span class="icon-span">
+              <i class="fa-solid fa-bars"></i>
+            </span>
+          </li>
+          <li class="main-navigation__item-right">
+            <img
+              class="right-image"
+              src="./img/ab67616d0000b2730a6e7332203c386364adf3df.jpg"
+              alt=""
+            />
+            <h2 class="main-navigation__header-rights">
+              The Kings Man <br />
+              Action, Adventure
+            </h2>
+            <h3 class="main-pg">PG-14</h3>
+            <span class="icon-spans">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-regular fa-star"></i>
+            </span>
+          </li>
+          <li class="main-navigation__item-rights">
+            <img
+              class="right-image-item"
+              src="./img/MV5BYzczMDI5NzQtODdmYS00NTcwLTg1MTYtNmU5NWY1NDA5ZGRkXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"
+              alt=""
+            />
+            <h2 class="main-navigation__header-rightss">
+              Resident Alien <br />
+              Action, Science
+            </h2>
+            <h3 class="main-nc">NC-11</h3>
+            <span class="icon-spans-item">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-regular fa-star"></i>
+              <i class="fa-regular fa-star"></i>
+            </span>
+          </li>
+          <li class="main-navigation__item-button">
+            <button>See More</button>
+          </li>
+          <li class="main-navigation__item-right">
+            <h1 class="main-navigation__header-right_first">Watchlists</h1>
+            <span class="icons-span">
+              <i class="fa-solid fa-bars"></i>
+            </span>
+          </li>
+          <li>
+            <img
+              class="right-image-first"
+              src="./img/ab67616d0000b2730a6e7332203c386364adf3df.jpg"
+              alt=""
+            />
+            <h2 class="main-navigation__header-first">
+              The Kings Man <br />
+              Adventure, Crime
+            </h2>
+            <h3 class="main-pgn">PG-14</h3>
+            <span class="icon-span-first">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-regular fa-star"></i>
+              <i class="fa-regular fa-star"></i>
+            </span>
+          </li>
+          <li class="main-navigation__item-right">
+            <img
+              class="right-image-second"
+              src="./img/reEMJA1uzscCbkpeRJeTT2bjqUp.jpg"
+              alt=""
+            />
+            <h2 class="main-navigation__header-second">
+              Money Heist <br />
+              Action, Sci-Fi
+            </h2>
+            <h3 class="main-ncn">NC-13</h3>
+            <span class="icon-span-second">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-regular fa-star"></i>
+              <i class="fa-regular fa-star"></i>
+            </span>
+          </li>
+          <li class="main-navigation__item-right">
+            <img
+              class="right-image-third"
+              src="./img/MV5BNTM4ZjFjNDItMWViZC00MzcyLWJmZmMtM2UxNDllNmRmMzU2XkEyXkFqcGc@._V1_.jpg"
+              alt=""
+            />
+            <h2 class="main-navigation__header-third">
+              Navalny <br />
+              Adventure, Drama
+            </h2>
+            <h3 class="main-pgg">PG-10</h3>
+            <span class="icon-span-third">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-regular fa-star"></i>
+              <i class="fa-regular fa-star"></i>
+            </span>
+          </li>
+          <li class="main-navigation__item-right">
+            <img
+              class="right-image-four"
+              src="./img/eb62e721-3ce3-4ec0-b44c-1bd8bc073d87.jpg"
+              alt=""
+            />
+            <h2 class="main-navigation__header-four">
+              Enternals <br />
+              Crime, War
+            </h2>
+            <h3 class="main-ncc">NC-11</h3>
+            <span class="icon-span-four">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-regular fa-star"></i>
+              <i class="fa-regular fa-star"></i>
+            </span>
+          </li>
+          <li class="main-navigation__item-buttons">
+            <button>See More</button>
+          </li>
+        </ul>
+      </section>
       <div class="clearfix"></div>
     </div>
   </body>
